# ai-emoji

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml
.github/: copilot-instructions.md
src/common/: config.py  img_request.py  logger_manager.py  utils_image.py
src/emoji_api/: __init__.py  main.py  routes.py  utils.py
src/emoji_manager/: __init__.py  emoji_manager.py  manager.py
